--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -174,6 +174,14 @@
 				<key>Path</key>
 				<string>SSDT-ECRW.aml</string>
 			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>SSDT-Fans-TP.aml</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>SSDT-Fans-TP.aml</string>
+			</dict>
 		</array>
 		<key>Delete</key>
 		<array/>
